# dataset.images.symbols

./: .gitattributes  Cite.md  License.md  README.md  Readme.md  Readmea.md  Readmes.md  pyproject.toml
.github/workflows/: stale.yml
dataset/letters/E/: desktop.ini
dataset/letters/È/: desktop.ini
notebooks/: generate_animated_previews.ipynb
