[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "set-ids"
version = "0.0.1"
authors = [
    { name="Kent madsen", email="kent.vejrup.madsen@outlook.com" }
]

description = "Image Dataset of Symbols"
readme = "Readme.md"

requires-python = ">=3.7"


[project.urls]
"Homepage" = "https://github.com/designermadsen-public-dataset/ids"
"Issues" = "https://github.com/designermadsen-public-dataset/ids/issues"
"License" = "https://raw.githubusercontent.com/designermadsen-public-dataset/ids/main/License.md"
"Kaggle" = "https://www.kaggle.com/datasets/kentvejrupmadsen/letter-images-dataset"

